@@ -1,0 +1,16 @@
+language: python
+os: linux
+dist: focal
+
+jobs:
+  include:
+  - python: 3.6
+  - python: 3.7
+  - python: 3.8
+  - python: 3.9
+
+install:
+  - pip install -r requirements.txt
+  - pip install -e .
+
+script: pytest tests -v
