@@ -566,3 +566,7 @@ Updated requirements.
 
 Updated pyproject.toml to use oldest-supported-numpy dependency.
 
+*****
+
+Added .travis.yml file.
+
